<?xml version="1.0"?>
<package format="2">

	<name>state_estimation_eskf</name>
	<version>0.0.0</version>
	<description>TODO</description>
	<maintainer email="masa0u0masa1215@gmail.com">Masayoshi Dohi</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>

	<depend>dh_std_tools</depend>
	<depend>dh_ros_tools</depend>
	<depend>dh_common_msgs</depend>
	<depend>dh_kdl_msgs</depend>

</package>
